# presentationUPC

./: .gitignore  acc.c  accMatMul.ncu-rep  accMatMul.nsys-rep  acc_n2000.nsys-rep  cudaMatMul.ncu-rep  cudaMatMul.nsys-rep  cuda_n2000.nsys-rep  lectureAlyaGPU.odp  parLoop.c
FEM1D/: CMakeLists.txt  Makefile  README.md  buildScript.sh  fem1d.f90  mod_nvtx.f90
matMul/: CMakeLists.txt  README.md  kernels.cu  kernels.cuh  main.cu
matmulACC/: Makefile  matmulACC  matmulACC.c
vecAdd/: CMakeLists.txt  kernels.cu  kernels.h  main.cu
